# clone-youtube-backend-django-

./: db.sqlite3  dirrerence_time.py  pyproject.toml  video_2.MOV
categories/: admin.py  models.py  serializers.py  urls.py  views.py
categories/migrations/: 0001_initial.py  0002_alter_category_name.py
comments/: admin.py  models.py  serializers.py
comments/migrations/: 0001_initial.py  0002_comment_content.py  0003_comment_review_alter_comment_content.py  0004_alter_comment_content.py  0005_alter_comment_review.py  0006_rename_content_comment_content_video_and_more.py
commonmodel/: apps.py  models.py  serializers.py
config/: permissions.py  schema.py  settings.py  urls.py
media/: 다운로드_1_L63AtOm.jfif
photos/: models.py  serializers.py  views.py
shorts/: admin.py  models.py  serializers.py  urls.py  views.py
shorts/migrations/: 0001_initial.py
users/: admin.py  models.py  quries.py  schema.py  serializers.py  types.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_image_user_name_alter_user_email.py  0003_user_subscribe.py  0004_user_likevideo_alter_user_subscribe.py  0005_user_alert.py  0006_user_likecomment.py  0007_alter_user_image.py  0008_alter_user_alert.py  0009_remove_user_image.py  0010_user_image.py  0011_alter_user_alert_alter_user_image_and_more.py  0012_user_recent_video_alter_user_alert_and_more.py  0013_rename_recent_video_user_recent_videos.py  0014_remove_user_recent_videos_user_recent_video1_and_more.py
videos/: admin.py  models.py  queries.py  schema.py  serializers.py  tests.py  types.py  urls.py  views.py
(+7 files in other folders)
